--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,11 @@ chardet==5.2.0
 chromadb==0.4.24
 sentence-transformers==2.2.2
 
+# 支持中文的嵌入模型和重排序模型
+# bge-small-zh-v1.5: 轻量级中文嵌入模型
+# bge-reranker-base: 中文重排序模型
+# 首次使用时会自动下载模型（约100-300MB）
+
 # OCR 功能
 pytesseract==0.3.10
 Pillow==10.1.0
@@ -22,6 +27,10 @@ scikit-learn==1.3.2
 
 # 网络请求
 requests==2.31.0
+
+# 文件上传和中文分词
+python-multipart==0.0.22
+jieba==0.42.1
 
 # 开发工具（可选）
 pytest==7.4.3
@@ -35,3 +44,9 @@ flake8==6.1.0
 #    CentOS/RHEL: sudo yum install tesseract
 #    macOS: brew install tesseract
 # 3. 首次运行时，sentence-transformers 会自动下载预训练模型
+# 4. 配置环境经验：
+#    - 确保 pip 版本是最新的：pip install --upgrade pip
+#    - 安装过程中可能会遇到依赖冲突，使用最新版本的 pip 可以解决大部分问题
+#    - ChromaDB 可能会遇到数据库初始化错误，这是正常现象，服务仍可正常运行
+#    - 如果遇到导入错误，检查 ChromaDB 的错误类型，并使用正确的异常类名
+#    - 对于大型模型，建议在有足够内存的环境中运行
